--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "a library to create world maps",
   "main": "index.js",
   "scripts": {
+    "gulp": "gulp",
+    "clean": "gulp clean",
+    "build": "gulp buildAll",
+    "watch": "gulp watchAll",
     "start": "concurrently -r -k serve 'gulp watchAll'"
   },
   "repository": {
@@ -17,9 +21,12 @@
   },
   "homepage": "https://github.com/spearwolf/kiwotigo#readme",
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.2.0",
     "concurrently": "^5.3.0",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
+    "rollup": "^2.26.9",
+    "rollup-plugin-terser": "^7.0.1",
     "serve": "^11.3.2"
   }
 }
