--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/spearwolf/kiwotigo#readme",
   "devDependencies": {
+    "@babel/core": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@rollup/plugin-babel": "^5.2.0",
     "concurrently": "^5.3.0",
     "esm": "^3.2.25",
