--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "gulp": "gulp",
     "clean": "gulp clean",
     "build": "gulp buildAll",
-    "watch": "gulp watchAll",
-    "start": "concurrently -r -k serve 'gulp watchAll'"
+    "dev": "gulp watchAll",
+    "serve": "serve",
+    "start": "concurrently -r -k serve \"gulp watchAll\""
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,16 @@
   },
   "homepage": "https://github.com/spearwolf/kiwotigo#readme",
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@rollup/plugin-babel": "^5.2.0",
-    "concurrently": "^5.3.0",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "concurrently": "^6.5.1",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
-    "rollup": "^2.26.9",
-    "rollup-plugin-terser": "^7.0.1",
-    "serve": "^11.3.2"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.62.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "serve": "^13.0.2",
+    "zx": "^4.2.0"
   }
 }
